# rustychip

./: .gitignore  Cargo.toml  README.md  tsconfig.json
native_frontend/: Cargo.toml
native_frontend/src/: cli.rs  draw.rs  io.rs  keyboard.rs  main.rs
public/: .gitignore  chip8.html  index.html  index.js  wasm.js  wasm_bg.wasm  wrapper.js
public/static/: style.css
rustychip_core/: Cargo.toml
rustychip_core/src/: lib.rs
wasm/: Cargo.toml  Makefile
wasm/src/: lib.rs
web_frontend/: index.ts  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts  wrapper.ts
