[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustychip_core = { path = "../rustychip_core" }
js-sys = "0.3.65"
wasm-bindgen = "0.2.88"

[dependencies.web-sys]
version = "^0.3.36"
features = [
    "Document",
    "Element",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "ImageData",
    "KeyboardEvent",
    "Window"
]

[lib]
crate-type = ["cdylib"]
